<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TextView</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">settings</string>
    <string name="title_activity_main">竞赛登录</string>
    <string name="test">如有疑问请联系我们\n联系电话:0791-83840363\nE-mail:iet3011@163.com\n网址:http://iet.jxufe.cn</string>
    <string name="name">请输入用户名</string>
    <string name="psd">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    
   </resources>
    
